deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datg-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: default
spec:
  rules:
  - host: datg.samkreter.com
    http:
      paths:
      - backend:
          serviceName: datg
          servicePort: 80
        path: /
